src/passes/02-parsing/jsligo/Tests/contracts/negative/pattern_matching_anomalies/missing_cases/c_c.ts
type p = ["Four"] | ["Five"] | ["Six"]

type t = ["One", p] | ["Two", nat] | ["Three"]

let s = (x : t) : unit =>
  match(x, {
    Two: (_) => unit,
    Three: () => unit,
    One: (c) => match(c, {
      Four: () => unit
    })
  })
